	* File send/receive support for Oscar (Thanks, William T. Mahan)
	* Option to have AIM over oscar notify you if you have 
	  unread mail (Thanks, Mark Doliner)
	* Fix first message in tab not displaying bug (Thanks Etan Reisner)
	* Switch the .desktop file to the new KDE/GNOME common vfolder 
	  format (Thanks Robert McQueen).
	* Allow only people in buddy list privacy option added for AIM

version 0.59 (06/24/2002):
	* Hungarian translation added (Thanks, Sutto Zoltan)
	* Swedish translation updated (Thanks, Christian Rose)
	* Spanish translation updated (Thanks, Alex)
	* Traditional Chinese translation updated (Thanks, Paladin Liu)
	* Czech translation added (Thanks, Honza)
	* Polish translation updated (Thanks Przemyslaw Sulek)
	* Squashed a bug in buddy right-click menu handling
	  that crashed Gaim.  In the process: found and
	  eliminated some memory leaks.
	* Fixed a significant applet leak
	* Can now change Jabber password on server (Thanks,
	  Nathan Walp)
	* Certain types of Jabber presence errors no longer
	  falsely show a buddy on-line.  Instead now a "broken
	  light-bulb" icon is shown and the error status is
	  available via "Get Away Msg"  (Thanks and a tip o'
	  the hat to Christian Hammond for the graphic)
	* Conversation struct has pointer to toolbar (thanks Brent
	  Priddy and Paul Miller)
	* Zephyr fixes (thanks, Arun A. Tharuvai)
	* Aliases in buddy ticker
	* Perl scripts can play Gaim sounds (thanks Andrew Rodland)
	* Internal sounds can be played by commands (thanks Lex Spoon)
	* Auto-login item in applet menu (thanks Chris Boyle)
	* Fixed MSN "Unkown Error Code", "Already there", and 
	  "Already in opposite list" errors
	* Changed "Play sound" button to "Mute" button
	* You can now have "reserved" chars in IM and proxy passwords
	* Jabber now has typing notification  (Thanks, Nathan Walp)
	* Improved support for Jabber resources  (Thanks, Nathan Walp)
	* Fixed problem with Gaim crashing on non-ASCII Jabber buddy